--- a/.github/workflows/Openwrt-AutoBuild.yml
+++ b/.github/workflows/Openwrt-AutoBuild.yml
@@ -6,12 +6,12 @@ on:
   push:
     branches:
       - master
-    paths:
-      - 'start'
-  schedule:
-    - cron: 0 9 * * *
-  watch:
-    types: [started]
+#    paths:
+#      - 'start'
+#  schedule:
+#    - cron: 0 9 * * *
+#  watch:
+#    types: [started]
 
 env:
   RUN_VALIDATION: true
